--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+{% assign sorted_publications = site.pages | where: 'layout', 'publication' | sort: 'date' | reverse %}
+
 <div class="project">
   <header class="project-header">
     <h1 class="project-name">{{ page.shortname }}: {{ page.longname }}</h1>
@@ -10,4 +12,13 @@ layout: default
   <article class="project-content">
     {{ content }}
   </article>
+
+  <h2>Publications</h2>
+  <ul>
+  {% for pub in sorted_publications %}
+    {% if pub.projects contains page.shortname %}
+      <li><a href="{{ pub.url }}">{{ pub.title }}, {{ pub.authors }}, {{ pub.info }}</a></li>
+    {% endif %}
+  {% endfor %}
+  </ul>
 </div>
