--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,3 +234,14 @@
         }
     }
 }
+
+/**
+ * Sidebar
+ */
+.sidebar {
+    float: left;
+
+    ul {
+        list-style-type: none;
+    }
+}
