--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,10 +4,25 @@
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    margin-bottom: 10px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
+    width: 100%;
+
+    h1 {
+        margin-left: 20px;
+        margin-bottom: 0px;
+        font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
+    }
+
+    a {
+        color: black;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
 
 .site-title {
