Abstracted out publication references

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,7 +17,7 @@ layout: default
   <ul>
   {% for pub in sorted_publications %}
     {% if pub.projects contains page.shortname %}
-      <li><a href="{{ pub.url }}">{{ pub.title }}, {{ pub.authors }}, {{ pub.info }}</a></li>
+      {% include pub-ref.html %}
     {% endif %}
   {% endfor %}
   </ul>
