--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -20,7 +20,7 @@ layout: default
   <ul>
   {% for pub in sorted_publications %}
     {% if pub.authors contains page.fullname %}
-      <li><a href="{{ pub.url }}">{{ pub.title }}, {{ pub.authors }}, {{ pub.info }}</a></li>
+      {% include pub-ref.html %}
     {% endif %}
   {% endfor %}
   </ul>
