Fix broken links

--- a/_includes/pub-ref.html
+++ b/_includes/pub-ref.html
@@ -1,1 +1,1 @@
-<li><a href="{{ pub.name }}">{{ pub.title }}, {{ pub.authors }}, {{ pub.info }}</a></li>
+<li><a href="{{ pub.url }}">{{ pub.title }}, {{ pub.authors }}, {{ pub.info }}</a></li>
