--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -4,7 +4,10 @@ layout: default
 <div class="publication">
     <h1>{{ page.title }}</h1>
     <h1>{{ page.info }}</h1>
-    <h2>{{ page.authors }}</h2>
+    <h2>{% for author in page.authors %}
+      {% if site.data.authors contains author %}{{ site.data.authors[author] }}{% else %}{{ author }}{% endif %}{% unless forloop.last %}, {% endunless %}
+    {% endfor %}
+    </h2>
     <a href="{{ page.link }}">Link</a>
     <h3>Abstract</h3>
     {{ content }}
