Clean up publications

--- a/_includes/pub-ref.html
+++ b/_includes/pub-ref.html
@@ -1,1 +1,1 @@
-<li><a href="{{ pub.url }}">{{ pub.authors | join: ', ' }}, <em>{{ pub.title }}</em>, {{ pub.info }}</a></li>
+<li><a href="{{ pub.url }}"><em>{{ pub.title }}</em>. {{ pub.authors | join: ', ' }}. {{ pub.info }}.</a></li>
