--- a/_includes/sorted-elements.html
+++ b/_includes/sorted-elements.html
@@ -1,3 +1,3 @@
 {% assign sorted_people = site.pages | where: 'layout', 'person' | sort: 'sort' %}
 {% assign sorted_projects = site.pages | where: 'layout', 'project' | sort: 'sort' %}
-{% assign sorted_publications = site.pages | where: 'layout', 'publication' | sort: 'sort' | reverse %}
+{% assign sorted_publications = site.pages | where: 'layout', 'publication' | sort: 'date' | reverse %}
