--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -5,16 +5,16 @@ layout: default
 {% include sorted-elements.html %}
 
 <div class="person">
-  <header class="person-header">
-    {% if page.picture %}<div class="person-picture"><img src="{{ page.picture }}"/></div>{% endif %}
-    <div class="person-data">
-      <h1 class="person-name">{{ page.fullname }}</h1>
-      <h2 class="person-position">{{ page.position }}</h2>
-      <span class="person-email"><a href="mailto:{{ page.email }}">{{ page.email }}</a></span>
+  <header>
+    {% if page.picture %}<div class="picture"><img src="{{ page.picture }}"/></div>{% endif %}
+    <div class="data">
+      <h1 class="name">{{ page.fullname }}</h1>
+      <h2 class="position">{{ page.position }}</h2>
+      <span class="email"><a href="mailto:{{ page.email }}">{{ page.email }}</a></span>
     </div>
   </header>
 
-  <article class="person-content">
+  <article>
     {{ content }}
   </article>
 
