--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,16 +1,16 @@
 {% include sorted-elements.html %}
 
-<div class="sidebar">
-  <ul class="menu">
+<div id="sidebar">
+  <ul>
     <li><a href="/people">People</a>
-      <ul class="list">
+      <ul>
         {% for person in sorted_people %}
         <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
         {% endfor %}
       </ul>
     </li>
     <li><a href="/projects">Projects</a>
-      <ul class="list">
+      <ul>
         {% for project in sorted_projects %}
         <li><a href="{{ project.url }}">{{ project.shortname }}</a></li>
         {% endfor %}
