--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -4,13 +4,13 @@ layout: default
 
 {% include sorted-elements.html %}
 
-<div class="person">
+<div id="person">
   <header>
-    {% if page.picture %}<div class="picture"><img src="{{ page.picture }}"/></div>{% endif %}
-    <div class="data">
-      <h1 class="name">{{ page.fullname }}</h1>
-      <h2 class="position">{{ page.position }}</h2>
-      <span class="email"><a href="mailto:{{ page.email }}">{{ page.email }}</a></span>
+    {% if page.picture %}<div id="picture"><img src="{{ page.picture }}"/></div>{% endif %}
+    <div id="data">
+      <h1 id="name">{{ page.fullname }}</h1>
+      <h2 id="position">{{ page.position }}</h2>
+      <span id="email"><a href="mailto:{{ page.email }}">{{ page.email }}</a></span>
     </div>
   </header>
 
