Fix flow in people index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -314,6 +314,7 @@
     .summary {
         overflow: hidden;
         margin-bottom: 30px;
+        width: 400px;
 
         img {
             float: left;
