--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,12 +12,14 @@ layout: default
     {{ content }}
   </article>
 
-  <h2>Publications</h2>
-  <ul>
-  {% for pub in sorted_publications %}
-    {% if pub.projects contains page.shortname %}
-      {% include pub-ref.html %}
-    {% endif %}
-  {% endfor %}
-  </ul>
+  <div class="publications">
+    <h2>Publications</h2>
+    <ul>
+      {% for pub in sorted_publications %}
+        {% if pub.projects contains page.shortname %}
+          {% include pub-ref.html %}
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </div>
 </div>
