--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
 <header class="site-header">
-<h1><a href="/">Loonwerks</a></h1>
+  <div id="loonwerks-logo">
+    <a href="/">
+      <img src="/images/loonwerks.jpg" />
+    </a>
+  </div>
 </header>
