--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -1,15 +1,16 @@
 ---
 layout: default
 ---
+
 <div class="publication">
-    <h1>{{ page.title }}</h1>
-    <h1>{{ page.info }}</h1>
-    <h2>{% for author in page.authors %}
+    <h1 id="title"><a href="{{ page.link }}">{{ page.title }}</a></h1>
+    <h2 id="authors">{% for author in page.authors %}
       {% if site.data.authors contains author %}{{ site.data.authors[author] }}{% else %}{{ author }}{% endif %}{% unless forloop.last %}, {% endunless %}
     {% endfor %}
     </h2>
-    <a href="{{ page.link }}">Link</a>
-    <h3>Abstract</h3>
-    {{ content }}
+    <h3 id="info">{{ page.info }}</h3>
+    <div id="abstract">
+      {{ content }}
+    </div>
 </div>
  
