--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -80,10 +80,16 @@
         overflow: hidden;
         width: 800px;
 
-        img {
-            float: left;
-            margin-bottom: 20px;
-            height: 250px;
+        #picture {
+            img {
+                float: left;
+                margin: 10px 10px 20px 10px;
+                height: 250px;
+
+                box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
+                -webkit-box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
+                -moz-box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
+            }
         }
 
         #data {
@@ -111,11 +117,16 @@
         img {
             float: left;
             height: 100px;
+            margin: 10px;
+
+            box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
+            -webkit-box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
+            -moz-box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
         }
         
         .text {
             float: left;
-            padding-top: 5px;
+            padding-top: 20px;
             padding-left: 30px;
         }
     }
@@ -126,6 +137,8 @@
  */
 
 .publications {
+    margin-top: 20px;
+
     ul {
         list-style-type: none;
         
