Use transparent banner

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div id="loonwerks-logo">
     <a href="/">
-      <img src="/images/loonwerks.jpg" />
+      <img src="/images/loonwerks.png" />
     </a>
   </div>
 </header>
