--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,14 +2,14 @@
 
 <div id="sidebar">
   <ul>
-    <li><a href="/people">People</a>
+    <li><a href="/people/">People</a>
       <ul>
         {% for person in sorted_people %}
         <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
         {% endfor %}
       </ul>
     </li>
-    <li><a href="/projects">Projects</a>
+    <li><a href="/projects/">Projects</a>
       <ul>
         {% for project in sorted_projects %}
         <li><a href="{{ project.url }}">{{ project.shortname }}</a></li>
