--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,10 +49,13 @@
 
     #sidebar {
         position: absolute;
-        top: 10px;
-        bottom: 0;
+        top: -10px;
+        bottom: -60px;
         left: 0;
         width: 200px;
+
+        padding-top: 20px;
+        background: $grey-color-light;
         
         ul {
             list-style-type: none;
@@ -65,10 +68,6 @@
         margin-right: 50px;
 
         padding: 30px;
-
-        box-shadow: 5px 5px 10px 3px rgba(117,117,117,1);
-        -webkit-box-shadow: 5px 5px 10px 3px rgba(117,117,117,1);
-        -moz-box-shadow: 5px 5px 10px 3px rgba(117,117,117,1);
     }
 }
 
@@ -86,9 +85,9 @@
                 margin: 10px 10px 20px 10px;
                 height: 250px;
 
-                box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
-                -webkit-box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
-                -moz-box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
+                box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
+                -webkit-box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
+                -moz-box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
             }
         }
 
@@ -109,6 +108,12 @@
  */
 
 #people {
+    .separator {
+        margin-top: -20px;
+        margin-bottom: 20px;
+        border-bottom: 1px dotted gray;
+    }
+
     .summary {
         overflow: hidden;
         margin-bottom: 30px;
@@ -119,9 +124,9 @@
             height: 120px;
             margin: 10px;
 
-            box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
-            -webkit-box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
-            -moz-box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
+            box-shadow: 0px 0px 5px -1px rgba(117,117,117,1);
+            -webkit-box-shadow: 0px 0px 5px -1px rgba(117,117,117,1);
+            -moz-box-shadow: 0px 0px 5px -1px rgba(117,117,117,1);
         }
         
         .text {
