--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,12 +3,12 @@ layout: default
 ---
 {% include sorted-elements.html %}
 
-<div class="project">
-  <header class="project-header">
-    <h1 class="project-name">{{ page.shortname }}: {{ page.longname }}</h1>
+<div id="project">
+  <header>
+    <h1>{{ page.shortname }}: {{ page.longname }}</h1>
   </header>
 
-  <article class="project-content">
+  <article>
     {{ content }}
   </article>
 
