--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,6 +103,16 @@
 }
 
 /**
+ * Project pages
+ */
+#project {
+    article {
+        clear: both;
+        margin-bottom: 20px;
+    }
+}
+
+/**
  * People index
  */
 
@@ -140,8 +150,6 @@
  */
 
 .publications {
-    margin-top: 20px;
-
     ul {
         list-style-type: none;
         
