--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -59,7 +59,6 @@
     #main {
         position: relative;
         margin-left: 200px;
-        margin-right: 50px;
 
         padding: 0px 30px;
 
@@ -211,6 +210,6 @@
  * Home page
  */
 #home {
-    width: 800px;
+    max-width: 800px;
     margin-bottom: -10px;
 }
