--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,14 @@
   <ul>
     <li><a href="/people/">People</a>
       <ul>
-        {% for person in sorted_people %}
+        {% for person in sorted_loonwerks %}
+        <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
+        {% endfor %}
+      </ul>
+    </li>
+    <li><a href="/people/cornwerks.html">Cornwerks</a>
+      <ul>
+        {% for person in sorted_cornwerks %}
         <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
         {% endfor %}
       </ul>
