Make Cornwerks a subitem

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,13 +7,7 @@
         {% for person in sorted_loonwerks %}
         <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
         {% endfor %}
-      </ul>
-    </li>
-    <li><a href="/people/cornwerks.html">Cornwerks</a>
-      <ul>
-        {% for person in sorted_cornwerks %}
-        <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
-        {% endfor %}
+        <li><a href="/people/cornwerks.html">Cornwerks</a></li>
       </ul>
     </li>
     <li><a href="/projects/">Projects</a>
