--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,6 @@
         {% for person in sorted_loonwerks %}
         <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
         {% endfor %}
-        <li><a href="/people/cornwerks.html">Cornwerks</a></li>
       </ul>
     </li>
     <li><a href="/projects/">Projects</a>
@@ -26,6 +25,9 @@
     </li>
     <li>
       <a href="/publications/">Publications</a>
+    </li>
+    <li>
+      <a href="/people/cornwerks.html">Cornwerks</a>
     </li>
   </ul>
 </div>
