Add facebook, hide cornwerks

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,8 +26,13 @@
     <li>
       <a href="/publications/">Publications</a>
     </li>
+    <!--   
     <li>
       <a href="/people/cornwerks.html">Cornwerks</a>
+    </li>
+    -->
+    <li>
+      <a href="https://www.facebook.com/groups/1056484394363020/">Facebook</a>
     </li>
   </ul>
 </div>
