Switch group to page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
     </li>
     -->
     <li>
-      <a href="https://www.facebook.com/groups/1056484394363020/">Facebook</a>
+      <a href="https://www.facebook.com/loonwerks/">Facebook</a>
     </li>
   </ul>
 </div>
