--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -129,6 +129,12 @@
                 height: 200px;
             }
         }
+        #project-tools {
+            float: right;
+            img {
+                height: 300px;
+            }
+        }
     }
 }
 
