--- a/_includes/sorted-elements.html
+++ b/_includes/sorted-elements.html
@@ -1,6 +1,7 @@
 {% assign sorted_people = site.pages | where: 'layout', 'person' | sort: 'sort' %}
 {% assign sorted_minnesota = site.pages | where: 'layout', 'person' | where: 'location', 'minnesota' | sort: 'sort' %}
 {% assign sorted_iowa = site.pages | where: 'layout', 'person' | where: 'location', 'iowa' | sort: 'sort' %}
+{% assign sorted_alumni = site.pages | where: 'layout', 'person' | where: 'location', 'alumni' | sort: 'sort' %}
 {% assign sorted_current_projects = site.pages | where: 'layout', 'project' | where: 'archive', false | sort: 'sort' | reverse %}
 {% assign sorted_previous_projects = site.pages | where: 'layout', 'project' | where: 'archive', true | sort: 'sort' | reverse %}
 {% assign sorted_tools = site.pages | where: 'layout', 'tool' | sort: 'title' %}
