--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,6 +83,16 @@
     }
 }
 
+blockquote {
+    border: 0px;
+    padding: 18px 70px;
+    background-color: #dadada;
+    margin: 5px;
+    color: #555;
+    box-shadow: 2px 2px 5px 1px;
+    letter-spacing: -0.8px;
+}
+
 /**
  * Person pages
  */
