Changed Founders to Headquarters in sidebar, renamed founders.html to minnesota.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
 <div id="sidebar">
   <ul>
-    <li><a href="/people/founders.html">Founders</a>
+    <li><a href="/people/minnesota.html">Headquarters</a>
       <ul>
         {% for person in sorted_minnesota %}
         <li><a href="{{ person.url }}">{{ person.fullname }}</a></li>
